<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_margin"
    tools:context=".GameActivity" >

    <LinearLayout
        android:id="@+id/layout_GameTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/layout_GameWhoVsWho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_GameUserName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/screen_vs_user"
                android:textColor="@color/green"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_GameVs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/screen_vs"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_GameEnemyName"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/screen_vs_remote"
                android:textColor="@color/red"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_GameRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:visibility="visible" >

            <TextView
                android:id="@+id/tv_GameRadioGroupTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/screen_level_difficulty" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_Easy"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/screen_easy" />

                <RadioButton
                    android:id="@+id/radio_Middle"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/screen_middle" />

                <RadioButton
                    android:id="@+id/radio_Hard"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:lines="1"
                    android:maxLines="1"
                    android:text="@string/screen_hard" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_GameCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_GameUserCount"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/screen_game_count"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_GameEnemyCount"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/screen_game_count"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_GameLevelDifficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_GameLevel"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:paddingRight="@dimen/activity_margin"
                android:text="@string/screen_level" />

            <TextView
                android:id="@+id/tv_GameDifficult"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/screen_middle"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_GameConnectionMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_GameConnection"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/screen_connection_mode" />

            <TextView
                android:id="@+id/tv_GameMode"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:paddingLeft="@dimen/activity_margin"
                android:text="@string/screen_bluetooth"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/layout_GameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_GameButtons"
        android:layout_below="@+id/layout_GameTop"
        android:gravity="center" >

        <RelativeLayout
            android:id="@+id/layout_Field"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="visible" >

            <kn.hqup.gamexo.gamefield.GameView
                android:id="@+id/game_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/activity_vertical_margin" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_Info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin" >

            <TextView
                android:id="@+id/tv_info_GameOptions"
                style="@style/tv_GameInfo"
                android:layout_above="@+id/tv_info_WinCount"
                android:text="@string/screen_info_game_options" />

            <TextView
                android:id="@+id/tv_info_WinCount"
                style="@style/tv_GameInfo"
                android:layout_above="@+id/tv_info_FieldSize" />

            <TextView
                android:id="@+id/tv_info_FieldSize"
                style="@style/tv_GameInfo"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/tv_info_numChecked"
                style="@style/tv_GameInfo"
                android:layout_below="@+id/tv_info_FieldSize" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_GameResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_GameResult"
                style="@style/tv_GameInfo"
                android:layout_above="@+id/tv_GameResult_winnerName"
                android:text="@string/screen_game_result" />

            <TextView
                android:id="@+id/tv_GameResult_winnerName"
                style="@style/tv_GameInfo"
                android:layout_centerVertical="true" />

            <TextView
                android:id="@+id/tv_GameResult_isWinner"
                style="@style/tv_GameInfo"
                android:layout_below="@+id/tv_GameResult_winnerName"
                android:text="@string/screen_game_result_is_winner" />
        </RelativeLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_GameButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <Button
            android:id="@+id/btn_GameStart"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_start"
            android:textColor="@color/orange" />

        <Button
            android:id="@+id/btn_GameReset"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_reset"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>